Updated Java args for CPW's new hotness